assets/css/base.css
@import url('https://fonts.googleapis.com/css2?family=Jost:wght@100..900&display=swap');

html,
body {
  margin: 0;
  padding: 0;
  /* height: 100%; */
}

body {
  color: #312f28;
  /* background-color: #f8f0e7; */
  background-color: #f4ba53;
  font-family: 'Jost', sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-size: 18px;
}

a {
  color: #312f28;
}
a:hover {
  color: #000000;
  text-decoration: none;
}

main,
footer {
  max-width: 720px;
  margin: 0 auto;
}

footer {
  color: #312f2880;
  font-size: 12px;
  padding: 32px 8px;
  text-align: center;
  text-wrap: balance;
  border-top: 1px solid #ffffff20;
  box-shadow: 0 -1px 0 #00000010;
  margin-top: 16px;
}

footer a {
  color: #312f28d0;
}
footer a:hover {
  color: #000000;
}

main {
  padding: 12px;
  margin-top: 16px;
}

header {
  overflow: scroll;
  border-bottom: 1px solid #00000030;
  box-shadow: 0 8px 8px #00000016;
  background-color: #ffce5bc0;
  backdrop-filter: blur(16px);
  margin-bottom: 16px;
  position: sticky;
  top: 0;
  z-index: 10;
}

header nav {
  max-width: 720px;
  margin: 0 auto;
  padding: 16px 8px;
  display: flex;
  align-items: center;
}

header nav a {
  font-size: 14px;
  font-weight: 500;
  text-decoration: none;
  text-transform: uppercase;
  padding: 4px 12px;
  margin: 0 2px;
  border-radius: 32px;
}
header nav a:hover {
  background-color: #ffffff80;
}
header nav a.here {
  background-color: #ffffff;
}
header nav a.right {
  margin-left: auto;
}

h1,
h2 {
  text-align: center;
  margin-bottom: 0;
  font-weight: 700;
  text-wrap: balance;
}

h1 {
  color: #000000;
  margin-top: 32px;
}

h2 {
  margin-top: 0px;
  margin-bottom: 32px;
  font-weight: 500;
}
h2 a {
  color: #000000;
  text-decoration: none;
}
h2 a:hover {
  text-decoration: underline;
}

section {
  margin: 32px 0;
}

section.center {
  text-align: center;
}

a.btn {
  display: inline-block;
  text-decoration: none;
  font-weight: 600;
  padding: 8px 16px;
  margin: 8px 4px;
  border: 3px solid #312f28;
  border-radius: 32px;
}
a.btn:hover {
  border-color: #000000;
  background-color: #fcca59;
}

a.btn-primary {
  background-color: #312f28;
  color: #ffffffe0;
}
a.btn-primary:hover {
  background-color: #000000;
  color: #ffffff;
}

pre {
  background-color: #312f28;
  border-radius: 4px;
  padding: 16px;
  overflow-x: scroll;
}
p code {
  background-color: #fcca59;
  border: 1px solid #00000030;
  padding: 2px 4px;
  border-radius: 4px;
}
pre code {
  color: #e8e8e8;
}
code {
  font-size: 14px;
  font-family: monospace;
}
code strong {
  color: #bb96e3;
}

